RESOLVED FIXED269867
REGRESSION(274164@main): Do not consult against Document's WeakHashSet for every Canvas ops
https://bugs.webkit.org/show_bug.cgi?id=269867
Summary REGRESSION(274164@main): Do not consult against Document's WeakHashSet for ev...
Yusuke Suzuki
Reported 2024-02-21 13:29:54 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-02-21 13:30:12 PST
Yusuke Suzuki
Comment 2 2024-02-21 13:34:07 PST
EWS
Comment 3 2024-02-21 15:51:50 PST
Committed 275137@main (3e7f2c1bc01d): <https://commits.webkit.org/275137@main> Reviewed commits have been landed. Closing PR #24897 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.