Source/WebCore/html/HTMLCanvasElement.cpp
@@ -956,8 +956,11 @@ void HTMLCanvasElement::eventListenersDidChange()
 
 void HTMLCanvasElement::didMoveToNewDocument(Document& oldDocument, Document& newDocument)
 {
-    oldDocument.removeCanvasNeedingPreparationForDisplayOrFlush(*this);
-    newDocument.addCanvasNeedingPreparationForDisplayOrFlush(*this);
+    auto* context = renderingContext();
+    if (context) {
+        oldDocument.removeCanvasNeedingPreparationForDisplayOrFlush(*context);
+        newDocument.addCanvasNeedingPreparationForDisplayOrFlush(*context);
+    }
     HTMLElement::didMoveToNewDocument(oldDocument, newDocument);
 }
 
